# fastapi-react-starter

./: README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
scripts/: create.ps1  init.ps1
