[tool.poetry]
name = "backend"
version = "0.1.0"
description = "astAPI Backend"
authors = ["Stanislav Rusak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
